--- a/style.css
+++ b/style.css
@@ -1,124 +1,106 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+$items: 4;
+$animation-time: 4s;
+$transition-time: .5s;
+$scale: 20%;
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+$total-time: ($animation-time * $items);
+$scale-base-1: (1 + $scale / 100%);
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background: #333;
-  color: #fff;
-  line-height: 1.2;
-}
-
-.slider {
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
-  width: 100vw;
-}
-
-.slide {
+.slideshow {
   position: absolute;
-  top: 0;
-  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.slideshow-image {
+  position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  transition: opacity 0.4s ease-in-out;
-}
+  background: no-repeat 50% 50%;
+  background-size: cover;
+  animation-name: kenburns;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: $total-time;
+  opacity: 5;
+  transform: scale($scale-base-1);
 
-.slide.current {
-  opacity: 1;
-}
-
-.slide .content {
-  position: absolute;
-  bottom: 70px;
-  left: -600px;
-  opacity: 0;
-  width: 600px;
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #333;
-  padding: 35px;
-}
-
-.slide .content h1 {
-  margin-bottom: 10px;
-}
-
-.slide.current .content {
-  opacity: 1;
-  transform: translateX(600px);
-  transition: all 0.7s ease-in-out 0.3s;
-}
-
-.buttons button#next {
-  position: absolute;
-  top: 40%;
-  right: 15px;
-}
-
-.buttons button#prev {
-  position: absolute;
-  top: 40%;
-  left: 15px;
-}
-
-.buttons button {
-  border: 2px solid #fff;
-  background-color: transparent;
-  color: #fff;
-  cursor: pointer;
-  padding: 13px 15px;
-  border-radius: 50%;
-  outline: none;
-}
-
-.buttons button:hover {
-  background-color: #fff;
-  color: #333;
-}
-
-@media (max-width: 500px) {
-  .slide .content {
-    bottom: -300px;
-    left: 0;
-    width: 100%;
+  @for $i from 1 through $items {
+    &:nth-child(#{$i}) {
+      animation-name: kenburns-#{$i};
+      z-index: ($items - $i);
+    }
   }
+}
 
-  .slide.current .content {
-    transform: translateY(-300px);
+@for $i from 1 through $items {
+  @keyframes kenburns-#{$i} {
+    $animation-time-percent: percentage($animation-time / $total-time);
+    $transition-time-percent: percentage($transition-time / $total-time);
+    
+    $t1: ($animation-time-percent * ($i - 1) - $transition-time-percent / 2);
+    $t2: ($animation-time-percent * ($i - 1) + $transition-time-percent / 2);
+    @if($t1 < 0%) { $t1: 0%; }
+    @if($t2 < 0%) { $t2: 0%; }
+
+    $t3: ($animation-time-percent * ($i) - $transition-time-percent / 2);
+    $t4: ($animation-time-percent * ($i) + $transition-time-percent / 2);
+    @if($t3 > 100%) { $t3: 100%; }
+    @if($t4 > 100%) { $t4: 100%; }
+
+    $t5: (100% - $transition-time-percent / 2);
+    $t6: (($t4 - $t1) * 100% / $t5);
+
+    #{$t1} { opacity: 1; transform: scale($scale-base-1); }
+    #{$t2} { opacity: 1; }
+    #{$t3} { opacity: 1; }
+    #{$t4} { opacity: 0; transform: scale(1); }
+    
+    @if($i != $items) {
+      100% { opacity: 0; transform: scale($scale-base-1); }
+    }
+    
+    @if($i == 1) {
+      $scale-plus: ($scale * (100% - $t5) / $t4);
+      $scale-plus-base-1: (1 + ($scale + $scale-plus) / 100%);
+    
+      #{$t5} { opacity: 0; transform: scale($scale-plus-base-1); }
+      100% { opacity: 1; }
+    }
   }
 }
 
 
-
-/* Backgorund Images */
- 
-.slide:first-child {
-  background: url('/images/landsend.jpg/1600x900') no-repeat
-    center top/cover;
-}
-.slide:nth-child(2) {
-  background: url('/images/arches.jpg/1600x900') no-repeat
-    center top/cover;
-}
-.slide:nth-child(3) {
-  background: url('/images/pb.jpg/1600x900') no-repeat
-    center top/cover;
-}
-.slide:nth-child(4) {
-  background: url('/images/bandon.jpg/1600x900') no-repeat
-    center top/cover;
-}
-.slide:nth-child(5) {
-  background: url('/images/glacierpt.jpg/1600x900') no-repeat
-    center top/cover;
-} 
-.slide:nth-child(6)  {
-  background: url('/images/bigsur.jpg/1600x900') no-repeat
-    center center/cover;
+// Presentational stuff
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
+  z-index: 99;
+  text-align: center;
+  font-family: Lato, sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  background-color: rgba(255,255,255,.15);
+  box-shadow: 0 1em 2em -1em rgba(0,0,0,.5);
+  padding: 1em 2em;
+  line-height: 1.5;
+  
+  small {
+    display: block;
+    text-transform: lowercase;
+    font-size: .7em;
+    
+    &:first-child {
+      border-bottom: 1px solid rgba(0,0,0,.25);
+      padding-bottom: .5em;
+    }
+    
+    &:last-child {
+      border-top: 1px solid rgba(0,0,0,.25);
+      padding-top: .5em;
+    }
+  }
 }
