--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
      -webkit-font-smoothing: antialiased;
  }
  html {
-     font-family: 'Cormorant SC';
+     font-family: 'Lato', sans-serif;
  }
  html,
  body {
