--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,7 +555,7 @@
      background: #f6f6f6 none repeat scroll 0 0;
  }
  .bg-color-1 {
-     background: #f7f7f7 none repeat scroll 0 0;
+     background: #ffffff none repeat scroll 0 0;
  }
  .bg-color-2 {
      background: #edf1f5 none repeat scroll 0 0;
