--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@
      background: #2d2d2d none repeat scroll 0 0;
  }
  .light-bg {
-     background: #f6f6f6 none repeat scroll 0 0;
+     background: #ffffff none repeat scroll 0 0;
  }
  .bg-color-1 {
      background: #ffffff none repeat scroll 0 0;
