--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,800');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Cormorant+SC:300,400,800');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 /* css files
 ====================== */
