--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2394,7 +2394,7 @@
 --------------- */
  
  .single-post.medium-post .blog-text p {
-     color: #8d8d8d;
+     color: #4b4a4a;
      font-size: 16px;
      line-height: 26px;
  }
