--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2935,7 +2935,7 @@
      color: #4c4c4c;
  }
  .portfolio-info > p {
-     color: #818181;
+     color: #4b4a4a;
      font-size: 16px;
      line-height: 28px;
  }
