--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,7 +156,7 @@
  
  p {
      font-family: 'Open Sans', sans-serif;
-     color: #8e8e8e;
+     color: #808080;
      font-size: 14px;
      line-height: 22px;
      font-weight: 300;
