--- a/arlo/arlo_new/arlo/css/modalboxes.css
+++ b/arlo/arlo_new/arlo/css/modalboxes.css
@@ -167,7 +167,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-size: contain;
+	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
 }
