--- a/arlo/arlo_new/arlo/css/modalboxes.css
+++ b/arlo/arlo_new/arlo/css/modalboxes.css
@@ -150,16 +150,18 @@
 	height: auto;
 	clear: both;
 	float: left;
+	
 }
 .arlo_tm_modalbox .popup_details .top_image{
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 30px;
+	
 }
 .arlo_tm_modalbox .popup_details .top_image img{
 	position: relative;
 	min-width: 100%;
-	opacity: 0;
+	
 }
 .arlo_tm_modalbox .popup_details .top_image .main{
 	position: absolute;
@@ -178,6 +180,7 @@
 }
 .arlo_tm_modalbox .portfolio_main_title .category a{
 	display: inline-block;
+	margin-top: 5px;
 	margin-bottom: 7px;
 	color: #868a9b;
 	
@@ -331,7 +334,6 @@
 }
 .arlo_tm_modalbox .news_popup_informations .image img{
 	position: relative;
-	opacity: 0;
 	min-width: 100%;
 }
 .arlo_tm_modalbox .news_popup_informations .image .main{
